[package]
name = "preearnings-call-scheduler"
version = "0.1.0"
authors = ["Daniel Imfeld <daniel@danielimfeld.com>"]

[dependencies]
chrono = "0.4.0"
crossbeam = "0.3.2"
csv = "1.0.0-beta.5"
failure="0.1.1"
itertools="0.7.6"
json="0.11"
lazy_static="1.0.0"
regex="0.2"
scraper="0.4.0"
serde = "1.0.9"
serde_derive = "1.0.9"
slog = "2.1"
sloggers="0.2.6"
reqwest="0.8.4"
